--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Сайт
+<!DOCTYPE html>
+
+<html lang='en' xmln='https://www.w3.org/1999/xhtml'>
+<head>
+    <meta charset='utf-8' />
+    <title></title>
+<head>
+<bode>
+<h1>Сайт</h1>
+</bode>
+</html>
